--- a/15/catalog.html
+++ b/15/catalog.html
@@ -15,7 +15,7 @@
     <header class="main-header">
       <nav class="navigation">
         <a class="navigation-icon" href="index.html">
-          <img class="navigation-icon-logo" src="images/header-icons/logo.svg" alt="Иконка логотипа седоны" width="140"
+          <img class="navigation-icon-logo" src="images/header-icons/logo.svg" alt="Иконка логотипа седоны." width="140"
             height="70">
         </a>
         <ul class="navigation_list navigation-text">
@@ -73,18 +73,21 @@
                   <input class="control-input visually-hidden" type="checkbox" name="swimming-pool" checked>
                   <span class="control-mark"></span>
                   <span class="control-label">Бассейн</span>
+                </label>
               </li>
               <li class="filter-infrastructure-item">
                 <label class="control">
                   <input class="control-input visually-hidden" type="checkbox" name="parking" checked>
                   <span class="control-mark"></span>
                   <span class="control-label">Парковка</span>
+                </label>
               </li>
               <li class="filter-infrastructure-item">
                 <label class="control">
                   <input class="control-input visually-hidden" type="checkbox" name="Wi-Fi">
                   <span class="control-mark"></span>
                   <span class="control-label">Wi-Fi</span>
+                </label>
               </li>
             </ul>
           </fieldset>
@@ -170,61 +173,28 @@
             <ul class="icons">
               <li class="icons-list">
                 <button class="icons-button icons-button-table icons-button-current">
-                  <svg class="icons-item" xmlns="http://www.w3.org/2000/svg" width="16" height="14" fill="none"
-                    viewBox="0 0 16 14">
-                    <g fill="#000" clip-path="url(#a)">
-                      <path d="M4 0H0v6h4V0ZM16 0h-4v6h4V0ZM10 0H6v6h4V0ZM4 8H0v6h4V8ZM16 8h-4v6h4V8ZM10 8H6v6h4V8Z" />
-                    </g>
-                    <defs>
-                      <clipPath id="a">
-                        <path fill="#fff" d="M0 0h16v14H0z" />
-                      </clipPath>
-                    </defs>
-                  </svg>
                   <span class="visually-hidden">Таблица</span>
                 </button>
               </li>
               <li class="icons-list">
                 <button class="icons-button icons-button-title">
-                  <svg class="icons-item" xmlns="http://www.w3.org/2000/svg" width="16" height="14" fill="none"
-                    viewBox="0 0 16 14">
-                    <g fill="#000" clip-path="url(#a)">
-                      <path d="M16 12H0v2h16v-2ZM14 2v6H2V2h12Zm2-2H0v10h16V0Z" />
-                    </g>
-                    <defs>
-                      <clipPath id="a">
-                        <path fill="#fff" d="M0 0h16v14H0z" />
-                      </clipPath>
-                    </defs>
-                  </svg>
                   <span class="visually-hidden">Полный экран</span>
                 </button>
               </li>
               <li class="icons-list">
                 <button class="icons-button icons-button-list">
-                  <svg class="icons-item" xmlns="http://www.w3.org/2000/svg" width="16" height="14" fill="none"
-                    viewBox="0 0 16 14">
-                    <g fill="#000" clip-path="url(#a)">
-                      <path
-                        d="M2 0H0v2h2V0ZM16 0H4v2h12V0ZM2 4H0v2h2V4ZM16 4H4v2h12V4ZM2 8H0v2h2V8ZM16 8H4v2h12V8ZM2 12H0v2h2v-2ZM16 12H4v2h12v-2Z" />
-                    </g>
-                    <defs>
-                      <clipPath id="a">
-                        <path fill="#fff" d="M0 0h16v14H0z" />
-                      </clipPath>
-                    </defs>
-                  </svg>
                   <span class="visually-hidden">Список</span>
                 </button>
               </li>
+            </ul>
           </div>
         </div>
-        </ul>
+
         <ul class="hotel-list">
           <li class="hotel-card">
             <a href="#" class="hotel-card-link">
               <img class="hotel-card-image" src="images/catalog/hotels-catalog/hotel-1.jpg" width="300" height="212"
-                alt="Отель с выходом из пещеры, на выходе которого видно звездное небо">
+                alt="Отель с выходом из пещеры, на выходе которого видно звездное небо.">
             </a>
             <a class="hotel-card-title" href="#">Amara Resort & Spa</a>
             <span class="hotel-name">Гостиница</span>
@@ -239,7 +209,7 @@
           <li class="hotel-card">
             <a href="#" class="hotel-card-link">
               <img class="hotel-card-image" src="images/catalog/hotels-catalog/hotel-2.jpg" width="300" height="212"
-                alt="Вид на скалу, изнутри которой исходит радуга">
+                alt="Вид на скалу, изнутри которой исходит радуга.">
             </a>
             <a class="hotel-card-title" href="#">Villas at Poco Diablo</a>
             <span class="hotel-name">Гостиница</span>
@@ -254,7 +224,7 @@
           <li class="hotel-card">
             <a href="#" class="hotel-card-link">
               <img class="hotel-card-image" src="images/catalog/hotels-catalog/hotel-3.jpg" width="300" height="212"
-                alt="Вид на разноуровневую скалу">
+                alt="Вид на разноуровневую скалу.">
             </a>
             <a class="hotel-card-title" href="#">Desert Quail Inn</a>
             <span class="hotel-name">Гостиница</span>
@@ -269,7 +239,7 @@
           <li class="hotel-card">
             <a href="#" class="hotel-card-link">
               <img class="hotel-card-image" src="images/catalog/hotels-catalog/hotel-4.jpg" width="300" height="212"
-                alt="Вид на скалу на фоне звездного неба">
+                alt="Вид на скалу на фоне звездного неба.">
             </a>
             <a class="hotel-card-title" href="#">GreenTree Inn</a>
             <span class="hotel-name">Гостиница</span>
@@ -283,12 +253,11 @@
           </li>
         </ul>
 
-
         <!--Пагинация-->
         <div class="pagination">
           <ul class="pagination-list">
             <li class="pagination-list_item pagination-active">
-              <a href="#" disabled="disabled">1</a>
+              <a href="#" class="disabled">1</a>
             </li>
             <li class="pagination-list_item">
               <a href="#">2</a>
@@ -308,26 +277,24 @@
           </ul>
         </div>
       </section>
+      <div class="page-footer-container-catalog">
+        <section data-test="subscribe" class="follow-catalog">
+          <div class="follow-catalog__text">
+            <h2 class="follow__text-catalog">подпишитесь на рассылку</h2>
+            <p class="follow__desscription-catalog">Только полезная информация и никакого спама, честное бойскаутское!
+            </p>
+          </div>
+          <form action="https://echo.htmlacademy.ru" class="mailing-form" method="get">
+            <input class="mailing-form-email" type="email" name="email" placeholder="Ваш e-mail" required>
+            <button class="mailing-form-button" type="submit">Подписаться</button>
+          </form>
+        </section>
     </main>
 
     <!--Footer-->
-
-    <div class="page-footer-container-catalog">
-      <section data-test="subscribe" class="follow-catalog">
-        <div class="follow-catalog__text">
-          <h2 class="follow__text-catalog">подпишитесь на рассылку</h2>
-          <p class="follow__desscription-catalog">Только полезная информация и никакого спама, честное бойскаутское!
-          </p>
-        </div>
-        <form action="https://echo.htmlacademy.ru" class="mailing-form" method="get">
-          <input class="mailing-form-email" type="email" name="email" placeholder="Ваш e-mail" required>
-          <button class="mailing-form-button" type="submit">Подписаться</button>
-        </form>
-      </section>
-      </form>
-      </section>
-      <footer data-test="footer" class="page-footer-catalog"></footer>
+    <footer data-test="footer" class="page-footer">
       <section class="social">
+        <h2 class="visually-hidden">Контакты</h2>
         <ul class="social__list">
           <li class="social__item ">
             <a href="https://vk.com/htmlacademy" class="social_link social__link__vk">
@@ -370,11 +337,11 @@
             <path fill="#000"
               d="M0 13.3v2.6h2.5v-2.6H0ZM11.6 4.9c-1.6 0-2.8.7-3.6 1.7h-.1V.4h-2v15.5h2v-5.3C7.9 8.5 9.2 7 11.2 7c1.8 0 2.9 1.4 2.9 3.2v5.7h2V9.8c.1-3-1.8-5-4.5-5ZM26.6 5.2h-4.8V1.5h-2v3.8h-1.9v2h1.9v6c0 1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1.1V7.2h4.8v-2ZM41.1 5c-1.6 0-2.9.8-3.5 2h-.1a3.7 3.7 0 0 0-3.4-2c-1.4 0-2.5.8-3.1 1.8h-.1V5.2H29v10.6h2v-5.4c0-2 1-3.5 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2V9.3c.1-2.5-1.4-4.3-3.9-4.3ZM47.8 13c0 1.8 1 2.8 2.8 2.8h2v-2h-1.7c-.7 0-1.1-.4-1.1-1.1V.4h-2V13ZM28.9 20a4.9 4.9 0 0 0-3.9-1.7c-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-2h.1v1.7h2V18.6h-2V20Zm-3.6 7.5a3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6s3.6 1.6 3.6 3.6c0 1.9-1.4 3.6-3.6 3.6ZM44.2 22.4c-.5-2.4-2.6-4.1-5.4-4.1a5.4 5.4 0 0 0-5.6 5.6c0 3 2.2 5.6 5.6 5.6 2.8 0 4.9-1.8 5.4-4.2h-2.1a3.4 3.4 0 0 1-3.3 2.3 3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6 1.6 0 2.8 1 3.3 2.2h2.1v-.2ZM55.1 20a4.9 4.9 0 0 0-3.9-1.7c-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-2h.1v1.7h2V18.6h-2V20Zm-3.6 7.5a3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6s3.6 1.6 3.6 3.6c0 1.9-1.5 3.6-3.6 3.6ZM68.7 20.2a5 5 0 0 0-3.9-2c-3.1 0-5.4 2.4-5.4 5.7 0 3.3 2.2 5.6 5.4 5.6 1.7 0 3-.8 3.8-1.8h.1v1.5h2V13.8h-2v6.4Zm-3.6 7.3a3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6s3.6 1.6 3.6 3.6c-.1 2-1.5 3.6-3.6 3.6ZM78.3 18.3a5.4 5.4 0 0 0-5.5 5.6c0 3 2.1 5.6 5.5 5.6 2.5 0 4.5-1.3 5.2-3.6h-2.1c-.5 1-1.6 1.6-3 1.6-1.9 0-3.3-1.3-3.4-3h8.8c.2-3.5-2-6.2-5.5-6.2Zm0 1.9c1.7 0 3 1 3.3 2.6h-6.5a3.2 3.2 0 0 1 3.2-2.6ZM98.2 18.3a4 4 0 0 0-3.6 2h-.1c-.6-1.2-1.8-2-3.4-2-1.4 0-2.5.7-3.1 1.8v-1.5h-1.9v10.6h2v-5.4c0-2 1-3.4 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.6-1.4-4.4-3.9-4.4ZM109.4 27.4l-3.6-9h-2.2l4.8 11.7c-.3.9-.7 1.2-1.7 1.2h-2.5v2h2.5c1.8 0 2.8-.8 3.5-2.6l4.7-12.2h-2.1l-3.4 8.9Z" />
           </svg>
-          </svg>
           <span class=" visually-hidden">HTML Academy</span>
         </a>
       </section>
-      </footer>
+    </footer>
+    </div>
   </body>
 
 </html>
